# UnitFormationAlgorithm

./: .gitignore  CMakeLists.txt  README.md
cmake-modules/: FindCatch.cmake  FindSFML.cmake
src/: CMakeLists.txt  main.cpp
src/app/: Application.cpp  Application.hpp  GameFactory.cpp  GameFactory.hpp
src/collision/: Circle.cpp  Circle.hpp  CollisionDetector.cpp  CollisionDetector.hpp  CollisionObject.cpp  CollisionObject.hpp  CollisionTile.cpp  CollisionTile.hpp  Rectangle.cpp  Rectangle.hpp  Vec2f.cpp  Vec2f.hpp  Vec2i.cpp  Vec2i.hpp  World.cpp  World.hpp  utils.hpp
src/entities/: ArcherUnit.cpp  ArcherUnit.hpp  Formation.cpp  Formation.hpp  MeleeUnit.cpp  MeleeUnit.hpp  Unit.cpp  Unit.hpp  Vec2.cpp  World.hpp
src/general/: Math.cpp  Math.hpp  Random.cpp  Random.hpp
src/logic/: BlockFormationController.cpp  BlockFormationController.hpp  BlockFormationShape.cpp  BlockFormationShape.hpp  EmptyFormationPlacement.cpp  EmptyFormationPlacement.hpp  FormationController.cpp  FormationController.hpp  FormationPlacement.hpp  FormationShape.hpp  GaleShapleyAlgorithm.cpp  GaleShapleyAlgorithm.hpp  RandomUnitPositioner.cpp  RandomUnitPositioner.hpp  SimulationController.cpp  SimulationController.hpp  UnitController.cpp  UnitController.hpp
src/ufa/: main.cpp
src/ufa/app/: Application.cpp  Application.hpp  GameFactory.cpp  GameFactory.hpp
src/ufa/collision/: Circle.hpp  CollisionDetector.cpp  CollisionDetector.hpp  CollisionObject.cpp  CollisionObject.hpp  CollisionTile.cpp  CollisionTile.hpp  Rectangle.cpp  Rectangle.hpp  Vec2f.cpp  Vec2f.hpp  Vec2i.cpp  World.cpp  World.hpp
src/ufa/entities/: ArcherUnit.cpp  ArcherUnit.hpp  Formation.cpp  Formation.hpp  MeleeUnit.cpp  MeleeUnit.hpp  RangedUnit.cpp  RangedUnit.hpp  Unit.cpp  Unit.hpp  Vec2.cpp  Vec2.hpp  World.cpp  World.hpp
src/ufa/general/: Logging.hpp  Math.cpp  Math.hpp  Random.cpp
src/ufa/logic/: BlockFormationController.cpp  BlockFormationController.hpp  BlockFormationShape.cpp  BlockFormationShape.hpp  Controller.hpp  EmptyFormationPlacement.cpp  EmptyFormationPlacement.hpp  FormationController.cpp  FormationController.hpp  FormationPlacement.hpp  FormationShape.hpp  GaleShapleyAlgorithm.cpp  GaleShapleyAlgorithm.hpp  RandomUnitPositioner.cpp  RandomUnitPositioner.hpp  SimulationController.cpp  SimulationController.hpp  UnitController.cpp  UnitController.hpp
src/ufa/ui/: DrawEvent.cpp  DrawEvent.hpp  DrawWindow.cpp  DrawWindow.hpp  Drawable.hpp  DrawableArcherUnit.cpp  DrawableArcherUnit.hpp  DrawableMeleeUnit.cpp  DrawableMeleeUnit.hpp  DrawableUnit.cpp  DrawableUnit.hpp  EventHandler.hpp  EventManager.cpp  EventManager.hpp  GameDrawer.cpp  GameDrawer.hpp  HudDrawer.cpp  HudDrawer.hpp  MouseBox.cpp  MouseBox.hpp  MouseEventHandler.cpp  MouseEventHandler.hpp  SimulationDrawer.cpp  SimulationDrawer.hpp  UnitDrawer.cpp  UnitDrawer.hpp  WindowEventHandler.cpp  WindowEventHandler.hpp
src/ui/: DrawableArcherUnit.cpp  DrawableArcherUnit.hpp  DrawableMeleeUnit.cpp  DrawableMeleeUnit.hpp  DrawableUnit.cpp  DrawableUnit.hpp  EventHandler.hpp  EventManager.cpp  EventManager.hpp  GameDrawer.cpp  GameDrawer.hpp  HudDrawer.cpp  HudDrawer.hpp  MouseBox.cpp  MouseBox.hpp  MouseEventHandler.cpp  MouseEventHandler.hpp  UnitDrawer.cpp  UnitDrawer.hpp  WindowEventHandler.cpp  WindowEventHandler.hpp
test/: CMakeLists.txt
test/collision/: Rectangle.cpp  Vec2f.cpp  utils.cpp
